fix: hide scroll-down chevrons on mobile

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -145,5 +145,8 @@ html {
     #liquid {
       display: none !important;
     }
+    .gg-chevron-double-down {
+      display: none !important;
+    }
   }
 }
